package com.mikaservices.platform.common.enums

enum class TypeEngin {
    PELLETEUSE,
    BULLDOZER,
    NIVELEUSE,
    COMPACTEUR,
    CAMION_BENNE,
    CAMION_CITERNE,
    GRUE,
    CHARGEUSE,
    RETROCHARGEUSE,
    BETONNIERE,
    FINISSEUR,
    GROUPE_ELECTROGENE,
    POMPE,
    FOREUSE,
    CONCASSEUR,
    AUTRE
}
