package com.mikaservices.platform.common.enums

enum class TypeMateriau {
    CIMENT,
    SABLE,
    GRAVIER,
    FER_A_BETON,
    ENROBE,
    BORDURE,
    BUSE,
    BOIS,
    PEINTURE,
    CARRELAGE,
    TUYAU_PVC,
    AGREGAT,
    BITUME,
    GEOTEXTILE,
    AUTRE
}
